add --java-options --illega-access=permit to support MuWire plugin